# Crucible-AI-Code-Reviewer

./: .gitignore  CHANGELOG-prompts.md  README.md  azure-pipelines-crucible.yml  config.yaml  conftest.py  crucible.py  plan.md  pyproject.toml  requirements.txt
.github/workflows/: crucible-reusable.yml  crucible.yml
core/: __init__.py  config.py  dedup.py  diff.py  engine.py  llm.py  logging_setup.py  models.py  poster.py  prompt_builder.py  retry.py  reviewer.py  secrets.py  summary.py
docs/: CRUCIBLE_ADMIN_SPEC.md  CRUCIBLE_AGENT_SPEC.md  CRUCIBLE_DELIVERY_ASSURANCE.md  CRUCIBLE_GITHUB_RUNBOOK.md  CRUCIBLE_MASTERPLAN.md  CRUCIBLE_PHASE1_DELIVERY_PLAN.md  ONBOARD_AZURE.md  ONBOARD_GITHUB.md
prompts/: review.md  summary.md  system.md
providers/: __init__.py  azure.py  base.py  github.py
rules/: global.md
rules/languages/: angular.md  csharp.md  python.md  sql.md  typescript.md
rules/projects/: crucible.md  focus-backend.md  focus-frontend.md  test-repo.md
tests/: test_azure_adapter.py  test_config.py  test_dedup.py  test_diff_parser.py  test_engine.py  test_failopen.py  test_github_adapter.py  test_models.py  test_poster.py  test_prompt_builder.py  test_retry.py  test_reviewer_contract.py  test_secret_redaction.py  test_size_guard.py  test_summary.py
tests/fixtures/: add.diff  binary.diff  delete.diff  gp07_combo.diff  modify.diff  noeol.diff  rename.diff  rename_edit.diff  space_path.diff
